fixed code overflow

--- a/app/assets/stylesheets/_typography.scss
+++ b/app/assets/stylesheets/_typography.scss
@@ -47,7 +47,6 @@ a {
   }
 }
 
-
 ul {
   list-style-type: circle;
 }
@@ -60,7 +59,7 @@ ul {
 .code {
   padding: 0;
   vertical-align: text-bottom;
-  overflow: auto;
+  overflow: scroll;
 }
 
 pre {
